# quantbit_machineshop_erp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
quantbit_machineshop_erp/: hooks.py  modules.txt
quantbit_machineshop_erp/public/js/: filter.js
quantbit_machineshop_erp/quanbit_machineshop_erp/custom/: item.json  item_barcode.json
quantbit_machineshop_erp/quanbit_machineshop_erp/doctype/machine_type/: machine_type.js  test_machine_type.py
quantbit_machineshop_erp/quantbit_machineshop_erp/doctype/machine_type/: machine_type.json  machine_type.py
quantbit_machineshop_erp/quantbit_machineshop_erp/doctype/machineshop_downstream_process/: machineshop_downstream_process.js  machineshop_downstream_process.json  machineshop_downstream_process.py  test_machineshop_downstream_process.py
quantbit_machineshop_erp/quantbit_machineshop_erp/doctype/machineshop_downstream_process_details/: machineshop_downstream_process_details.json  machineshop_downstream_process_details.py
quantbit_machineshop_erp/quantbit_machineshop_erp/doctype/machineshop_downstream_process_master/: machineshop_downstream_process_master.js  machineshop_downstream_process_master.json  machineshop_downstream_process_master.py  test_machineshop_downstream_process_master.py
quantbit_machineshop_erp/quantbit_machineshop_erp/doctype/machineshop_downtime_reason/: machineshop_downtime_reason.js  machineshop_downtime_reason.json  machineshop_downtime_reason.py  test_machineshop_downtime_reason.py
quantbit_machineshop_erp/quantbit_machineshop_erp/doctype/machineshop_shift/: machineshop_shift.js  (+3 more)
(+56 files in other folders)
